--- a/style/board.css
+++ b/style/board.css
@@ -93,10 +93,12 @@
   }
   .noticeWrapper .mobileTableContents .tableItem {
     border-bottom: 1px solid #ddd;
+  }
+  .noticeWrapper .mobileTableContents .tableItem a {
     padding: 1.5rem 0.5rem;
     font-size: 0.7rem;
   }
-  .noticeWrapper .mobileTableContents .tableItem .imp {
+  .noticeWrapper .mobileTableContents .tableItem a .imp {
     margin-right: 1rem;
     font-size: 0.7rem;
     background-color: #FF6D0C;
@@ -104,7 +106,7 @@
     color: #fff;
     padding: 0.3rem 0.8rem;
   }
-  .noticeWrapper .mobileTableContents .tableItem .date {
+  .noticeWrapper .mobileTableContents .tableItem a .date {
     float: right;
     line-height: 1rem;
     font-size: 0.5rem;
