--- a/style/board.css
+++ b/style/board.css
@@ -12,6 +12,10 @@
   padding: 2rem 0;
 }
 
+.noticeWrapper .mobileTableContents {
+  display: none;
+}
+
 .noticeWrapper .pcTableContents {
   margin-top: 2rem;
   display: grid;
@@ -64,6 +68,65 @@
   height: 2rem;
   line-height: 2rem;
   background-color: #006FD4;
+}
+
+@media screen and (max-width: 1023px) {
+  .noticeWrapper {
+    width: 85%;
+    margin: 5rem auto;
+  }
+  .noticeWrapper h1 {
+    font-size: 1.2rem;
+  }
+  .noticeWrapper h2 {
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 1rem 0;
+  }
+  .noticeWrapper .pcTableContents {
+    display: none;
+  }
+  .noticeWrapper .mobileTableContents {
+    margin-top: 2rem;
+  }
+  .noticeWrapper .mobileTableContents .tableClassifi {
+    background-color: #006FD4;
+    padding: 1rem;
+    color: #fff;
+    font-size: 1rem;
+  }
+  .noticeWrapper .mobileTableContents .tableItem {
+    border-bottom: 1px solid #ddd;
+  }
+  .noticeWrapper .mobileTableContents .tableItem a {
+    padding: 1.5rem 0.5rem;
+    font-size: 1rem;
+  }
+  .noticeWrapper .mobileTableContents .tableItem a .imp {
+    margin-right: 1rem;
+    font-size: 0.9rem;
+    background-color: #FF6D0C;
+    font-weight: 700;
+    color: #fff;
+    padding: 0.5rem 1rem;
+  }
+  .noticeWrapper .mobileTableContents .tableItem a .date {
+    float: right;
+    line-height: 1.6rem;
+    font-size: 0.8rem;
+  }
+  .noticeWrapper .pageNumberWrapper {
+    margin-top: 1.5rem;
+    text-align: center;
+  }
+  .noticeWrapper .pageNumberWrapper .pageNumber {
+    display: inline-block;
+    color: #fff;
+    width: 2rem;
+    height: 2rem;
+    line-height: 2rem;
+    background-color: #006FD4;
+  }
 }
 
 @media screen and (max-width: 767px) {
