--- a/scss/board.scss
+++ b/scss/board.scss
@@ -94,6 +94,7 @@
 
         .mobileTableContents{
             margin-top: 2rem;
+            display:block;
 
             .tableClassifi{
                 background-color: #006FD4;
