--- a/scss/writing.scss
+++ b/scss/writing.scss
@@ -1,3 +1,5 @@
+@import "./mixin";
+
 .boardWrapper{
     width: 75%;
     margin: 5rem auto;
@@ -11,7 +13,7 @@
         padding: 2rem 0;
     }
 
-    .tableContents{
+    .pcTableContents{
         margin-top: 2rem;
         display:flex;
         justify-content: space-between;
@@ -24,8 +26,12 @@
             background-color: #006FD4;
         }
 
+        .tableItem{
+            font-size: 1rem;
+        }
+
         #tableSub{
-            span{
+            .imp{
                 margin-right: 1rem;
                 font-size: 0.9rem;
                 background-color: #FF6D0C;
@@ -36,14 +42,17 @@
             width: 60%;
             text-align: left;
             border-right: 3px solid #fff;
+
         }
 
         #tableDate{
+            font-size: 1rem;
             width: 20%;
             border-right: 3px solid #fff;
         }
 
         #tableView{
+            font-size: 1rem;
             width: 20%;
         }
     }
@@ -55,3 +64,176 @@
         border-bottom: 1px solid #ddd;
     }
 }
+
+@include desktop{
+    .boardWrapper{
+    
+        h1{
+            font-size: 1.5rem;
+        }
+    
+        .pcTableContents{
+            display:none;
+    
+            .tableItem{
+                font-size: 0.8rem;
+            }
+
+    
+            #tableDate{
+                font-size: 0.8rem;
+            }
+    
+            #tableView{
+                font-size: 0.8rem;
+            }
+        }
+
+        .mobileTableContents{
+            display:none;
+        }
+
+    }
+}
+
+@include tablet{
+
+    .boardWrapper{
+
+        width: 85%;
+    
+        h1{
+            font-size: 1.5rem;
+        }
+    
+        .pcTableContents{
+            display:none;
+    
+            .tableItem{
+                font-size: 0.8rem;
+            }
+
+    
+            #tableDate{
+                font-size: 0.8rem;
+            }
+    
+            #tableView{
+                font-size: 0.8rem;
+            }
+        }
+
+        .mobileTableContents{
+            display: flex;
+
+            .tableClassifi{
+                text-align: center;
+                color: #fff;
+                padding: 1.2rem;
+                background-color: #006FD4;
+                font-size: 1rem;
+            }
+
+            #tableSub{
+                .imp{
+                    margin-right: 1rem;
+                    font-size: 0.7rem;
+                    background-color: #FF6D0C;
+                    font-weight: 700;
+                    color: #fff;
+                    padding: 0.5rem 1rem;
+                }
+                border-right: 3px solid #fff;
+                width: 70%;
+            }
+
+            .tableItem{
+                font-size: 0.8rem;
+            }
+
+            #tableDate{
+                font-size: 0.8rem;
+                width: 30%;
+            }
+        }
+
+    }
+
+
+
+}
+
+@include mobile{
+
+    .boardWrapper{
+
+        width: 85%;
+    
+        h1{
+            font-size: 1rem;
+        }
+
+        h2{
+            padding: 1.5rem 0;
+            font-size: 0.8rem;
+        }
+    
+        .pcTableContents{
+            display:none;
+    
+            .tableItem{
+                font-size: 0.8rem;
+            }
+
+    
+            #tableDate{
+                font-size: 0.8rem;
+            }
+    
+            #tableView{
+                font-size: 0.8rem;
+            }
+        }
+
+        .mobileTableContents{
+            display: flex;
+
+            .tableClassifi{
+                text-align: center;
+                color: #fff;
+                padding: 1.2rem;
+                background-color: #006FD4;
+                font-size: 1rem;
+            }
+
+            #tableSub{
+                .imp{
+                    margin-right: 0.5rem;
+                    font-size: 0.65rem;
+                    background-color: #FF6D0C;
+                    font-weight: 700;
+                    color: #fff;
+                    padding: 0.4rem 0.8rem;
+                }
+                border-right: 3px solid #fff;
+                width: 65%;
+            }
+
+            .tableItem{
+                font-size: 0.7rem;
+            }
+
+            #tableDate{
+                font-size: 0.7rem;
+                width: 35%;
+            }
+        }
+
+        .writingSection{
+            font-size: 0.8rem;
+        }
+
+    }
+
+}
+
