--- a/scss/writing.scss
+++ b/scss/writing.scss
@@ -73,19 +73,19 @@
         }
     
         .pcTableContents{
-            display:none;
+            display:flex;
     
             .tableItem{
-                font-size: 0.8rem;
+                font-size: 1rem;
             }
 
     
             #tableDate{
-                font-size: 0.8rem;
+                font-size: 1rem;
             }
     
             #tableView{
-                font-size: 0.8rem;
+                font-size: 1rem;
             }
         }
 
@@ -108,19 +108,6 @@
     
         .pcTableContents{
             display:none;
-    
-            .tableItem{
-                font-size: 0.8rem;
-            }
-
-    
-            #tableDate{
-                font-size: 0.8rem;
-            }
-    
-            #tableView{
-                font-size: 0.8rem;
-            }
         }
 
         .mobileTableContents{
@@ -148,11 +135,11 @@
             }
 
             .tableItem{
-                font-size: 0.8rem;
+                font-size: 1rem;
             }
 
             #tableDate{
-                font-size: 0.8rem;
+                font-size: 1rem;
                 width: 30%;
             }
         }
