--- a/scss/writing.scss
+++ b/scss/writing.scss
@@ -57,6 +57,10 @@
         }
     }
 
+    .mobileTableContents{
+        display:none;
+    }
+
     .writingSection{
         padding: 2rem;
         word-break: keep-all;
