--- a/style/compIntro.css
+++ b/style/compIntro.css
@@ -32,9 +32,15 @@
 }
 
 .bodyWrapper .contentsWrapper .iconWrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .bodyWrapper .contentsWrapper .iconWrapper .iconContainer {
@@ -108,8 +114,13 @@
     font-size: 1rem;
   }
   .bodyWrapper .contentsWrapper .iconWrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .bodyWrapper .contentsWrapper .iconWrapper .iconContainer {
     width: 100vw;
