--- a/style/board.css
+++ b/style/board.css
@@ -18,9 +18,13 @@
 
 .noticeWrapper .pcTableContents {
   margin-top: 2rem;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 60% 20% 20%;
-  justify-content: space-between;
+  -ms-grid-columns: 60% 20% 20%;
+      grid-template-columns: 60% 20% 20%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .noticeWrapper .pcTableContents .tableClassifi {
