--- a/style/contact.css
+++ b/style/contact.css
@@ -33,7 +33,8 @@
 .contactWrapper .searchSection .searchBar .fa-search {
   cursor: pointer;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   right: 3%;
   font-size: 1.2rem;
   color: #006FD4;
@@ -52,8 +53,12 @@
 }
 
 .contactWrapper .faqWrapper .faqSection .subject {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 1rem;
 }
 
@@ -68,8 +73,12 @@
 }
 
 .contactWrapper .faqWrapper .faqSection .faqContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .contactWrapper .faqWrapper .faqSection .faqContainer .faqItem {
@@ -101,9 +110,15 @@
 
 .contactWrapper .mtomWrapper .mtomContainer {
   margin: 3rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .contactWrapper .mtomWrapper .mtomContainer #chatSection h2 {
@@ -124,9 +139,15 @@
 }
 
 .contactWrapper .mtomWrapper .mtomContainer .mtomSection h2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 0.9rem;
   padding: 0.8rem 0;
 }
@@ -149,6 +170,8 @@
 }
 
 .contactWrapper .pcBoardNav .mainNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -218,9 +241,15 @@
 }
 
 .contactWrapper .mobileBoardNav .mainNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .contactWrapper .mobileBoardNav .mainNav li {
@@ -283,8 +312,12 @@
     font-size: 1.2rem;
   }
   .contactWrapper .faqWrapper .faqSection .subject {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-bottom: 1rem;
   }
   .contactWrapper .faqWrapper .faqSection .subject h1 {
@@ -296,9 +329,16 @@
     width: 8%;
   }
   .contactWrapper .faqWrapper .faqSection .faqContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .contactWrapper .faqWrapper .faqSection .faqContainer .faqItem {
     cursor: pointer;
@@ -322,9 +362,16 @@
   }
   .contactWrapper .mtomWrapper .mtomContainer {
     margin: 3rem 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .contactWrapper .mtomWrapper .mtomContainer #chatSection {
     margin-bottom: 0;
@@ -348,9 +395,15 @@
     font-size: 1.2rem;
   }
   .contactWrapper .mtomWrapper .mtomContainer .mtomSection h2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     font-size: 1rem;
     padding: 0.8rem 0;
   }
@@ -394,8 +447,12 @@
     font-size: 1rem;
   }
   .contactWrapper .faqWrapper .faqSection .subject {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-bottom: 1rem;
   }
   .contactWrapper .faqWrapper .faqSection .subject h1 {
@@ -407,9 +464,16 @@
     width: 10%;
   }
   .contactWrapper .faqWrapper .faqSection .faqContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .contactWrapper .faqWrapper .faqSection .faqContainer .faqItem {
     cursor: pointer;
@@ -433,9 +497,16 @@
   }
   .contactWrapper .mtomWrapper .mtomContainer {
     margin: 3rem 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .contactWrapper .mtomWrapper .mtomContainer #chatSection {
     margin-bottom: 0;
@@ -459,9 +530,15 @@
     font-size: 1rem;
   }
   .contactWrapper .mtomWrapper .mtomContainer .mtomSection h2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     font-size: 0.8rem;
     padding: 0.8rem 0;
   }
