--- a/style/reset.css
+++ b/style/reset.css
@@ -4,7 +4,8 @@
   font-size: 16px;
   list-style: none;
   font-family: 'NanumSquare', sans-serif;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 a {
@@ -27,12 +28,19 @@ body::-webkit-scrollbar {
 header {
   height: 5rem;
   position: relative;
+  -webkit-transition: right 0.5s ease;
   transition: right 0.5s ease;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 85%;
   margin: 0 auto;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #fff;
 }
 
@@ -45,7 +53,8 @@ header .logo {
 header .logo img {
   position: relative;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   width: 100%;
 }
 
@@ -55,9 +64,15 @@ header .pcNav {
 }
 
 header .pcNav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 header .pcNav ul li {
@@ -101,7 +116,8 @@ header .mobileNav .hamburgerMenu .line {
   width: 100%;
   position: relative;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 
 header .mobileNav .hamburgerMenu .line::before, header .mobileNav .hamburgerMenu .line::after {
@@ -122,6 +138,7 @@ header .mobileNav .hamburgerMenu .line::after {
 
 .bodyWrapper {
   position: relative;
+  -webkit-transition: right 0.5s ease;
   transition: right 0.5s ease;
 }
 
@@ -132,13 +149,18 @@ header .mobileNav .hamburgerMenu .line::after {
   z-index: 8;
   background-color: #fff;
   width: 50vw;
+  -webkit-transition: left 0.5s ease;
   transition: left 0.5s ease;
 }
 
 .mobileMenu .loginSection {
   padding: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .mobileMenu .loginSection span {
@@ -184,10 +206,15 @@ header .mobileNav .hamburgerMenu .line::after {
   position: relative;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 80%;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .modal .buttonWrapper button {
@@ -214,7 +241,8 @@ header .mobileNav .hamburgerMenu .line::after {
   width: 100%;
   height: 100%;
   background-size: cover;
-  filter: brightness(50%);
+  -webkit-filter: brightness(50%);
+          filter: brightness(50%);
 }
 
 .introWrapper .introInfo {
@@ -222,7 +250,8 @@ header .mobileNav .hamburgerMenu .line::after {
   top: 50%;
   left: 50%;
   color: #fff;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .introWrapper .introInfo h1 {
@@ -249,8 +278,12 @@ footer .footerWrapper {
   height: 100%;
   margin: 0 auto;
   width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 footer .footerWrapper .infoWrapper {
@@ -329,7 +362,8 @@ footer .footerWrapper .infoWrapper span {
   footer .footerWrapper img {
     top: 50%;
     left: 0;
-    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
     position: absolute;
     width: 7%;
   }
@@ -372,20 +406,31 @@ footer .footerWrapper .infoWrapper span {
     padding: 3rem 0;
   }
   footer .footerWrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   footer .footerWrapper img {
     margin-bottom: 1rem;
     top: 0;
-    transform: none;
+    -webkit-transform: none;
+            transform: none;
     width: 20%;
     position: relative;
   }
   footer .footerWrapper .infoWrapper {
     font-size: 0.75rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     text-align: center;
   }
   footer .footerWrapper .infoWrapper span {
@@ -431,19 +476,30 @@ footer .footerWrapper .infoWrapper span {
     padding: 3rem 0;
   }
   footer .footerWrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   footer .footerWrapper img {
     margin-bottom: 1rem;
     top: 0;
-    transform: none;
+    -webkit-transform: none;
+            transform: none;
     width: 20%;
     position: relative;
   }
   footer .footerWrapper .infoWrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     text-align: center;
   }
   footer .footerWrapper .infoWrapper span {
