--- a/style/writing.css
+++ b/style/writing.css
@@ -14,9 +14,15 @@
 
 .boardWrapper .pcTableContents {
   margin-top: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .boardWrapper .pcTableContents .tableClassifi {
@@ -56,6 +62,10 @@
   width: 20%;
 }
 
+.boardWrapper .mobileTableContents {
+  display: none;
+}
+
 .boardWrapper .writingSection {
   padding: 2rem;
   word-break: keep-all;
@@ -68,6 +78,8 @@
     font-size: 1.5rem;
   }
   .boardWrapper .pcTableContents {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
   .boardWrapper .pcTableContents .tableItem {
@@ -95,6 +107,8 @@
     display: none;
   }
   .boardWrapper .mobileTableContents {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
   .boardWrapper .mobileTableContents .tableClassifi {
@@ -149,6 +163,8 @@
     font-size: 0.8rem;
   }
   .boardWrapper .mobileTableContents {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
   .boardWrapper .mobileTableContents .tableClassifi {
