--- a/scss/board.scss
+++ b/scss/board.scss
@@ -5,10 +5,11 @@
     margin: 5rem auto;
 
     h1{
-        font-size: 1.5rem;
+        font-size: 1.8rem;
     }
 
     h2{
+        font-size: 1.2rem;
         font-weight: 500;
         padding: 2rem 0;
     }
@@ -24,6 +25,7 @@
         justify-content: space-between;
 
         .tableClassifi{
+            font-size: 1.2rem;
             text-align: center;
             color: #fff;
             padding: 1.2rem;
@@ -38,21 +40,28 @@
             border-right: 3px solid #fff;
         }
 
-        .tableItem{
-            padding: 1.5rem 1rem;
+        .tableItem{            
+
             border-bottom: 1px solid #C5C5C5;
 
-            .imp{
-                margin-right: 1rem;
-                font-size: 0.9rem;
-                background-color: #FF6D0C;
-                font-weight: 700;
-                color: #fff;
-                padding: 0.5rem 1rem;
+            a{
+                padding: 2rem 1rem;
+                font-size: 1.2rem;
+                .imp{
+                    margin-right: 1rem;
+                    font-size: 0.9rem;
+                    background-color: #FF6D0C;
+                    font-weight: 700;
+                    color: #fff;
+                    padding: 0.5rem 1rem;
+                }
             }
+
         }
 
         .date, .view{
+            font-size: 1.1rem;
+            padding: 2rem 1rem;
             text-align: center;
         }
     }
