--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -9,12 +9,13 @@
         margin: 5rem auto;
 
         h1 {
-            font-size: 1.5rem;
+            font-size: 1.8rem;
         }
 
         h2 {
-            margin: 1.5rem 0;
-            font-size: 1.2rem;
+            padding: 1.5rem;
+            margin-bottom: 2rem;
+            font-size: 1.5rem;
             font-weight: 500;
         }
 
@@ -59,12 +60,12 @@
 
                 h1 {
                     color: #fff;
-                    font-size: 1.2rem;
+                    font-size: 1.5rem;
                     margin-right: 1rem;
                 }
 
                 img {
-                    width: 5%;
+                    width: 4%;
                 }
             }
 
@@ -87,6 +88,8 @@
 
 
                     p {
+                        font-size: 1.2rem;
+                        text-indent: 5px;
                         line-height: 2rem;
                         word-break: keep-all;
                     }
@@ -102,7 +105,7 @@
         padding: 5rem 0;
 
         h1 {
-            font-size: 1.2rem;
+            font-size: 1.5rem;
         }
 
         .mtomContainer {
@@ -136,8 +139,8 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    font-size: 0.9rem;
-                    padding: 0.8rem 0;
+                    font-size: 1.2rem;
+                    padding: 1.2rem 0;
                 }
 
 
@@ -149,7 +152,7 @@
                 }
 
                 p {
-                    font-size: 0.9rem;
+                    font-size: 1.1rem;
                     line-height: 1.2rem;
                     word-break: keep-all;
                 }
@@ -202,6 +205,7 @@
                 a {
                     color: #fff;
                     padding: 1.5rem 2rem;
+                    font-size: 1.1rem;
 
                     .fa-chevron-right {
                         margin-left: 1rem;
@@ -214,7 +218,7 @@
                         background-color: #fff;
 
                         a {
-                            font-size: 0.9rem;
+                            font-size: 1.1rem;
                             color: #000;
 
                             &:hover {
