--- a/scss/index.scss
+++ b/scss/index.scss
@@ -74,7 +74,7 @@
         }
 
         .mainIntro{
-            font-size: 2.2rem;
+            font-size: 2.5rem;
             position:absolute;
             top: 50%;
             left: 50%;
@@ -98,7 +98,7 @@
             }
 
             a{
-                font-size: 1rem;
+                font-size: 1.2rem;
                 padding: 1rem 2.5rem;
                 letter-spacing: 2px;
                 display:inline-block;
@@ -163,6 +163,7 @@
                 a{
                     padding: 1.5rem 2rem;
                     color: #fff;
+                    font-size: 1.2rem;
                 }
 
                 .subNav{
@@ -171,8 +172,9 @@
                         background-color: #fff;
 
                         a{
-                            font-size: 0.9rem;
+                            font-size: 1.1rem;
                             color: #000;
+                            padding:2rem;
 
                             &:hover{
                                 background-color: #eee;
