--- a/scss/product.scss
+++ b/scss/product.scss
@@ -16,11 +16,12 @@
             .productInfo{
                 line-height: 1.8rem;
                 h1{
-                    font-size: 1rem;
+                    font-size: 1.2rem;
                 }
 
                 h2{
-                    font-size: 0.9rem;
+                    margin-top: 1rem;
+                    font-size: 1.1rem;
                     font-weight: 500;
                     word-break: keep-all;
                     
@@ -37,8 +38,13 @@
                 }
 
                 h1{
-                    padding: 0.5rem 0;
+                    padding: 1rem 0;
                     font-weight: 500;
+                    font-size: 1.2rem;
+                }
+
+                h2{
+                    font-size: 1.2rem;
                 }
             }
 
@@ -51,14 +57,19 @@
             .downloadItem{
                 text-align: center;
 
+                h1{
+                    font-size: 1.2rem;
+                }
+
                 button{
                     margin-top: 2rem;
                     border-radius: 50px;
                     border: none;
                     background-color: #006FD4;
-                    width: 7.5rem;
-                    height: 2.5rem;
+                    width: 8rem;
+                    height: 3rem;
                     color: #fff;
+                    font-size: 1.1rem;
                 }
             }
 
@@ -183,13 +194,13 @@
                 margin: 10% 0;
 
                 h1{
-                    font-size: 1.4rem;
+                    font-size: 1.5rem;
                 }
 
                 h2{
                     margin-top: 1rem;
                     word-break: keep-all;
-                    font-size: 1rem;
+                    font-size: 1.2rem;
                     font-weight: 500;
                     line-height: 2rem;
                 }
