--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -67,10 +67,11 @@ header {
 
                 a {
                     text-align: center;
-                    width: 8rem;
+                    width: 10rem;
                     line-height: 5rem;
                     height: 5rem;
-                    font-size: 1rem;
+                    font-size: 1.1rem;
+                    font-weight: 500;
 
                     &:hover {
                         border-bottom: 5px solid #006FD4;
@@ -81,7 +82,7 @@ header {
 
             .far {
                 margin-left: 1rem;
-                font-size: 1.2rem;
+                font-size: 1.4rem;
                 cursor: pointer;
             }
 
