--- a/style/index.css
+++ b/style/index.css
@@ -77,7 +77,7 @@
 }
 
 .bodyWrapper .mainWrapper .mainIntro {
-  font-size: 2.2rem;
+  font-size: 2.5rem;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -102,7 +102,7 @@
 }
 
 .bodyWrapper .mainWrapper .mainIntro a {
-  font-size: 1rem;
+  font-size: 1.2rem;
   padding: 1rem 2.5rem;
   letter-spacing: 2px;
   display: inline-block;
@@ -165,6 +165,7 @@
 .bodyWrapper .pcBoardNav .mainNav .mainNav-list a {
   padding: 1.5rem 2rem;
   color: #fff;
+  font-size: 1.2rem;
 }
 
 .bodyWrapper .pcBoardNav .mainNav .mainNav-list .subNav li {
@@ -172,8 +173,9 @@
 }
 
 .bodyWrapper .pcBoardNav .mainNav .mainNav-list .subNav li a {
-  font-size: 0.9rem;
+  font-size: 1.1rem;
   color: #000;
+  padding: 2rem;
 }
 
 .bodyWrapper .pcBoardNav .mainNav .mainNav-list .subNav li a:hover {
